# COMP590_S26_Final

./: .gitignore  README.md  index.html  package.json  pnpm-lock.yaml
src/: App.css  (+1 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: archives.rs  commands.rs  error.rs  globals.rs  lib.rs  main.rs  ollama.rs  transcribe.rs
src-tauri/src/archives/: control.rs  settings.rs  summarization.rs  transcription.rs  utils.rs  volumes.rs  writer.rs
src-tauri/src/archives/control/: constants.rs  implementations.rs  subsystems.rs  types.rs
src-tauri/src/archives/control/implementations/: ollama.rs
src-tauri/src/archives/control/subsystems/: ollama_controller.rs
src-tauri/src/archives/settings/: constants.rs  implementations.rs  types.rs
src-tauri/src/archives/settings/implementations/: file_settings.rs
src-tauri/src/archives/summarization/: constants.rs  implementations.rs  subsystems.rs  summary.rs
src-tauri/src/archives/summarization/implementations/: ollama.rs  test.rs
src-tauri/src/archives/summarization/subsystems/: half_stream.rs  ollama_module.rs
src-tauri/src/archives/transcription/: constants.rs  downsampler.rs  implementations.rs  recorder.rs  subsystem.rs  subsystems.rs
src-tauri/src/archives/transcription/implementations/: parakeet.rs  test.rs
src-tauri/src/archives/transcription/subsystems/: downsampler.rs  parakeet_module.rs  recorder.rs
src-tauri/src/archives/utils/: chunk_buffer.rs  chunk_channel.rs  chunk_queue.rs  chunked_buffer.rs  data_channel.rs
src-tauri/src/archives/volumes/: constants.rs  implementations.rs  types.rs
(+21 files in other folders)
