[package]
name = "auto-archives"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "auto_archives_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
parakeet-rs = "0.3.4"
cpal = "0.17.3"
hound = "3.5.1"
rubato = "1.0.1"
audioadapter-buffers = "2.0"
thiserror = "2.0.18"
dotenvy = "0.15"
ollama-rs = "0.3.4"
ringbuf = "0.4.8"
crossbeam-channel = "0.5.15"
async-trait = "0.1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
dirs-next = "2"
futures = "0.3"

